--- a/Crop deal/cropdetails/src/main/resources/application.yml
+++ b/Crop deal/cropdetails/src/main/resources/application.yml
@@ -6,3 +6,7 @@ spring:
       uri: mongodb+srv://raghavendra:power5678@cropsdeal.3pb5k.mongodb.net/cropdetails
   application:
     name: Cropdetails
+  mvc:
+    pathmatch:
+      matching-strategy:
+        ant-path-matcher
